--- a/code/Makefile
+++ b/code/Makefile
@@ -1,5 +1,5 @@
 # We only need to build our one source file
-OBJS = main.o
+OBJS = main.o ssd1305.o
 
 # We've got opencm3 in the folder with us
 OPENCM3_DIR := ./libopencm3
